--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.java linguist-detectable=false
-*.ruby linguist-detectable=false
-*.objective-c linguist-detectable=false
-*.objective-c++ linguist-detectable=false
-*.javascript linguist-detectable=false
+*.rb linguist-detectable=false
+*.m linguist-detectable=false
+*.mm linguist-detectable=false
+*.js linguist-detectable=false
