--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-native-sqlite-storage": "^6.0.3",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-responsive-screen": "^1.4.2"
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-router-native": "^6.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
