Create : Setting up SQLite

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,6 @@
+pod 'React', :path => '../node_modules/react-native'
+pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
+
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
