--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native": "0.72.6",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^13.14.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-router-native": "^6.17.0"
   },
   "devDependencies": {
