--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@types/react-native-sqlite-storage": "^6.0.3",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.72.6",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.14.0",
