--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
     "@types/react-native-sqlite-storage": "^6.0.3",
     "react": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.14.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-transition": "^1.1.8",
     "react-router-native": "^6.17.0"
   },
   "devDependencies": {
